{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 375,
  "lineage": "d856b5d2-86ed-ce27-3a2f-d34feaf66e39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e309a5f3a6dd97ea",
            "arn": "arn:aws:ec2:eu-west-1:542536657176:instance/i-08d9e6695cbebcb3f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSMManagedInstance_Role",
            "id": "i-08d9e6695cbebcb3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0101f3109935cd762",
            "private_dns": "ip-172-16-10-62.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.62",
            "public_dns": "ec2-54-216-92-7.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.92.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ff6e0c1b8c01fa65",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08fe46c71b216b142"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d71ce455e8c38ab3",
            "tags": {
              "Name": "Group5EC2Instance"
            },
            "tags_all": {
              "Name": "Group5EC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fe46c71b216b142"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_managed_instance_profile",
            "aws_iam_role.ssm_managed_instance_role",
            "aws_iam_role_policy_attachment.ssm_managed_instance_attachment",
            "aws_security_group.http_allowed",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:542536657176:internet-gateway/igw-0324fe2e610c0c668",
            "id": "igw-0324fe2e610c0c668",
            "owner_id": "542536657176",
            "tags": {
              "Name": "Group5InternetGateway"
            },
            "tags_all": {
              "Name": "Group5InternetGateway"
            },
            "vpc_id": "vpc-0b23735136ab6f8e5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:542536657176:route-table/rtb-0ea66e81fea7d05e0",
            "id": "rtb-0ea66e81fea7d05e0",
            "owner_id": "542536657176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0324fe2e610c0c668",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_internet"
            },
            "tags_all": {
              "Name": "route_internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b23735136ab6f8e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a910f8b060915a06",
            "route_table_id": "rtb-0ea66e81fea7d05e0",
            "subnet_id": "subnet-0d71ce455e8c38ab3"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.internet",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:542536657176:security-group/sg-08fe46c71b216b142",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fe46c71b216b142",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231111140417885600000003",
            "name_prefix": "terraform-",
            "owner_id": "542536657176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP_Security_Group"
            },
            "tags_all": {
              "Name": "HTTP_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b23735136ab6f8e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:542536657176:subnet/subnet-0d71ce455e8c38ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d71ce455e8c38ab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "542536657176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group5sub"
            },
            "tags_all": {
              "Name": "group5sub"
            },
            "vpc_id": "vpc-0b23735136ab6f8e5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:542536657176:vpc/vpc-0b23735136ab6f8e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-09e614f6944139e98",
            "default_route_table_id": "rtb-022325721b2c27fc3",
            "default_security_group_id": "sg-0822521f6bcb3bbe7",
            "dhcp_options_id": "dopt-06aaab68db5f89f25",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b23735136ab6f8e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022325721b2c27fc3",
            "owner_id": "542536657176",
            "tags": {
              "Name": "aws_vpc_terraform"
            },
            "tags_all": {
              "Name": "aws_vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}